# eai-fleet

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  AGENTS.md  Dockerfile  Makefile  README.md  cognitive_walkthrough.md  config.py  k8s_client.py  main.py  models.py  nano_fleet.db  prometheus_query.py  pyproject.toml
apps/backend/: .dockerignore  Dockerfile  install_deps.py  pyproject.toml  recordings_pull.py
apps/backend/app/: __init__.py  catalog.py  config.py  demo.py  k8s.py  main.py  metrics.py  model_deploy.py  models.py  nano.py  playback_sync.py  prometheus.py
apps/backend/app/routers/: __init__.py  fleet.py  health.py
apps/backend/tests/: __init__.py  conftest.py
apps/backend/tests/unit/: __init__.py  test_catalog.py  test_coordinated_set_image.py  test_deploy_route.py  test_dockerfile_ca_trust.py  test_fleet.py  test_inference_ops.py  test_k8s_reads.py  test_model_deploy.py  test_model_deploy_http.py  test_models_list.py  test_nano.py  test_playback_sync.py  test_recordings_pull.py  test_recordings_route.py  test_rollback.py  test_set_image.py
apps/frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  openapi-ts.config.ts  package.json  playwright.config.ts  svelte.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
apps/frontend/scripts/: gen-backend-api.mjs  mock-backend.py
apps/frontend/src/: app.css  app.html  hooks.server.ts
apps/frontend/src/lib/: demo.ts  errors.ts  hey-api.ts  models.ts  preferences.svelte.ts  state.svelte.ts
apps/frontend/src/lib/components/: DeviceAccordionItem.svelte  DeviceInferenceActions.svelte  EmptyState.svelte  ErrorRetry.svelte  FleetSummary.svelte  FleetToolbar.svelte  LastUpdated.svelte  LoadingSkeleton.svelte  ModelDeployForm.svelte  PageHeader.svelte  RunningImage.svelte  SetImageForm.svelte
apps/frontend/src/routes/: +layout.svelte  +page.svelte
apps/frontend/src/routes/devices/[device_id]/: +page.svelte
apps/frontend/src/routes/settings/: +page.svelte
apps/frontend/tests/: README.md  setup.ts
apps/frontend/tests/common/: fixtures.ts
apps/frontend/tests/e2e/: detail.spec.ts  fleet.spec.ts  mocks.ts  set-image.spec.ts  settings.spec.ts
apps/frontend/tests/unit/: EmptyState.svelte.test.ts  ErrorRetry.svelte.test.ts  PageHeader.svelte.test.ts  demo.test.ts  errors.test.ts  models.test.ts  state.test.ts
ca-trust/: README.md  ca-bundle.crt
docs/: AI_FRONTEND_WORKFLOW.md
nano_fleet/: __init__.py  config.py  database.py  main.py  models.py
nano_fleet/routers/: fleet.py  health.py
nano_fleet/tests/: conftest.py
nano_fleet/tests/unit/: test_fleet.py
routers/: fleet.py  health.py
scripts/: check_makefile.py
tests/: README.md  __init__.py  conftest.py
tests/unit/: test_fleet.py  test_set_image.py
