[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eai-nano-fleet-mgr"
version = "0.1.0"
description = "Central fleet manager for the eai-nano Jetson fleet (KubeEdge)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlmodel>=0.0.16",
    "pydantic>=2.6",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-timeout>=2.0",
    "httpx>=0.27",
    "ruff>=0.4",
    "pyright>=1.1",
]

[project.scripts]
fleet-mgr = "nano_fleet.main:run"

[tool.setuptools.packages.find]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["nano_fleet/tests"]
