[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eai-nano-fleet-mgr"
version = "0.1.1"
description = "Central fleet manager for the eai-nano Jetson fleet (KubeEdge)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx2>=2.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-timeout>=2.0",
    "ruff>=0.4",
    "pyright>=1.1",
]

[project.scripts]
fleet-mgr = "main:run"

# Flat layout — the repo IS the service. Top-level app modules + the routers package
# (tests are not packaged into the image).
[tool.setuptools]
py-modules = ["main", "config", "models", "prometheus_query"]
packages = ["routers"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
