[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eai-nano-fleet-mgr"
version = "0.2.0"
description = "Central fleet manager for the eai-nano Jetson fleet (KubeEdge)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx2>=2.0",
    "eai_core[base]>=0.1.36",
    "pydantic>=2.6",
    "pydantic-settings>=2.0",
    "prometheus-client>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-timeout>=2.0",
    "ruff>=0.4",
    "pyright>=1.1",
]

[project.scripts]
fleet-mgr = "app.main:run"

# Standard src-layout: the `app` package is the service (mirrors eai-nano
# apps/backend/app). Tests are not packaged into the image.
[tool.setuptools]
packages = ["app", "app.routers"]

[tool.ruff]
line-length = 100
# eai-core is a vendored submodule with its own lint config and style; lint only
# fleet's own code (`ruff check .` / `ruff format` run from this dir would otherwise
# traverse it and fail on its module names + formatting).
extend-exclude = ["eai-core"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pyright]
# Don't type-check the vendored eai-core submodule or the local venv.
exclude = ["eai-core", ".venv", "**/__pycache__"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
